@@ -1,18 +1,0 @@
-<html>
-<head>
-<title>LatestVersion Plugin</title>
-</head>
-
-<body>
-
-<h1>LatestVersion Plugin</h1>
-
-This plugin can be used to find out what the latest available jEdit
-version is. To invoke it, select
-<b>Plugins</b>&gt;<b>Check jEdit Version</b>. When invoked, it will
-connect to a special URL
-(<code>http://www.jedit.org/jEdit-version.txt</code>),
-which contains version info.
-
-</body>
-</html>
